echo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: vetify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: strm/helloworld-http
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 40Mi
            limits:
              cpu: 100m
              memory: 48Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: vetify
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: echo
