proxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: vetify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: proxy
    spec:
      volumes:
        - name: vetify-co-ao-conf
          configMap:
            name: vetify-co-ao-conf-map
        - name: www-vetify-co-ao-conf
          configMap:
            name: www-vetify-co-ao-conf-map
        - name: sso-vetify-co-ao-conf
          configMap:
            name: sso-vetify-co-ao-conf-map
      containers:
        - name: proxy
          image: nginx
          volumeMounts:
            - name: vetify-co-ao-conf
              mountPath: /etc/nginx/conf.d/vetify.co.ao.conf
              subPath: vetify.co.ao.conf
              readOnly: true
            - name: www-vetify-co-ao-conf
              mountPath: /etc/nginx/conf.d/www.vetify.co.ao.conf
              subPath: www.vetify.co.ao.conf
              readOnly: true
            - name: sso-vetify-co-ao-conf
              mountPath: /etc/nginx/conf.d/sso.vetify.co.ao.conf
              subPath: sso.vetify.co.ao.conf
              readOnly: true
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 40Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-svc
  namespace: vetify
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: proxy
